Updated wording and colors for page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Lee Merigold</h1>
-    <p>Web Developer &bull; Designer &bull; Programmer</p>
+    <p>Systems Administrator &bull; PowerShell Automation &bull; Programmer</p>
   </header>
 
   <nav>
@@ -23,19 +23,20 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hello recruiting team! I'm <strong>Lee Merigold</strong>, and I am looking to get a new job in the industry with a strong focus on programming and development. I have been working as a system administrator for the last X amount of years focusing on the Microsoft 365 Tenant.
+        Hello recruiting team! I'm Lee Merigold, and I am looking to get a new job in the industry with more of a focus on programming, development, and data. I have been working as a system administrator for the last 2 years focusing on the Microsoft 365 Tenant.
+        I use PowerShell to automate different Microsoft/Team processes that we use daily, and I enjoy that part of my job the most and want to continue down the technical/development path in IT.
       </p>
     </section>
 
     <section id="skills">
-      <h2>Skills</h2>
+      <h2>Skills/Certifications</h2>
       <div class="skills-list">
-        <div class="skill">HTML</div>
-        <div class="skill">CSS</div>
+        <div class="skill">HTML/CSS</div>
+        <div class="skill">Git/GitHub/GitLab</div>
         <div class="skill">PowerShell</div>
         <div class="skill">Python</div>
         <div class="skill">Ansible</div>
-        <div class="skill">Git & GitHub & GitLab</div>
+        <div class="skill">CompTIA Security+ Certification</div>
       </div>
     </section>
 
@@ -44,33 +45,33 @@
       <div class="projects-list">
         <div class="project">
           <strong>NBA Stat Tracker (Python)</strong><br>
-          <span>Gets more in-depth stats and averages for a season or career for an NBA player after giving a CSV from BasketballReference.com.</span><br>
+          <span>Gets more in-depth stats and averages for a season or career for an NBA player after getting a CSV or list of CSVs from BasketballReference.com.</span><br>
           <a href="https://github.com/leegg713/NbaDataSorter" target="_blank">Link to GitHub Page</a>
         </div>
         <div class="project">
-          <strong>Next Project</strong><br>
-          <span>Get real-time weather updates for any city.</span><br>
-          <a href="https://github.com/yourusername/weather-app" target="_blank">Link to GitHub Page</a>
+          <strong>Workout Log Project (Python/Flask)</strong><br>
+          <span>Track and update workouts to see trends over time with graphs along with some other cool features.</span><br>
+          <a href="https://github.com/leegg713/PythonWorkoutLog" target="_blank">Link to GitHub Page</a>
         </div>
-        <div class="project">
+        <!-- <div class="project">
           <strong>Next Project</strong><br>
           <span>Full-stack blogging platform using React and Node.js.</span><br>
-          <a href="https://github.com/yourusername/blog-platform" target="_blank">Link to GitHub Page</a>
-        </div>
+          <a href="https://github.com/yourusername/blog-platform" target="_blank">Link to GitHub Page</a> -->
       </div>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
       <p>
-        Email: <a href="mailto:leemerigold7@gmail.com">leemerigold7@gmail.com</a><br>
-        LinkedIn: <a href="https://www.linkedin.com/in/lee-merigold/" target="_blank">lee-merigold</a>
+        <b>Email:</b> <a href="mailto:leemerigold7@gmail.com">leemerigold7@gmail.com</a><br>
+        <b>LinkedIn:</b> <a href="https://www.linkedin.com/in/lee-merigold/" target="_blank">lee-merigold</a><br>
+        <b>GitHub:</b> <a href="https://github.com/leegg713" target="_blank">GitHub Page</a>
       </p>
     </section>
   </main>
 
   <footer>
-    &copy; 2025 Lee Merigold. All rights reserved.
+    Lee Merigold
   </footer>
 
   <script src="script.js"></script>
