Added new AirBNB project I am working on to it

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
           <span>Track and update workouts to see trends over time with graphs along with some other cool features.</span><br>
           <a href="https://github.com/leegg713/PythonWorkoutLog" target="_blank">Link to GitHub Page</a>
         </div>
-        <!-- <div class="project">
-          <strong>Next Project</strong><br>
-          <span>Full-stack blogging platform using React and Node.js.</span><br>
-          <a href="https://github.com/yourusername/blog-platform" target="_blank">Link to GitHub Page</a> -->
+        <div class="project">
+          <strong>Data Analysis Using AirBNB Data(SQL/SQLite3/Python)</strong><br>
+          <span>Uses Python and SQL together to find different information from an AirBNB database for Nashville.</span><br>
+          <a href="https://github.com/leegg713/AirBNB-Data-Analysis" target="_blank">Link to GitHub Page</a> -->
       </div>
     </section>
 
