Added resume link at bottom

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       <p>
         <b>Email:</b> <a href="mailto:leemerigold7@gmail.com">leemerigold7@gmail.com</a><br>
         <b>LinkedIn:</b> <a href="https://www.linkedin.com/in/lee-merigold/" target="_blank">lee-merigold</a><br>
-        <b>GitHub:</b> <a href="https://github.com/leegg713" target="_blank">GitHub Page</a>
+        <a href="https://github.com/leegg713" target="_blank">GitHub Page</a><br>
+        <a href="https://docs.google.com/document/d/1OEmsegxW-g86WpvNpv9P0AwtEsEQFF7E/edit?usp=sharing&ouid=107582508215111294825&rtpof=true&sd=true" target="_blank">Resume</a><br>
       </p>
     </section>
   </main>
