Updated aboutme section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <section id="about">
       <h2>About Me</h2>
       <p>
-        Hello recruiting team! I'm Lee Merigold, and I am looking to get a new job in the industry with more of a focus on programming, development, and data. I have been working as a system administrator for the last 2 years focusing on the Microsoft 365 Tenant.
-        I use PowerShell to automate different Microsoft/Team processes that we use daily, and I enjoy that part of my job the most and want to continue down the technical/development path in IT.
+      Hello! I'm Lee Merigold, an IT professional with 5 years of experience in IT with 2 years working as a Systems Administrator.
+      My work has focused heavily on the Microsoft 365 environment, where I have used PowerShell to automate routine tasks and help manage the Microsoft 365 Tenant. 
+      I like working through tech problems and finding a way to fix them. 
+      Whether it's writing a quick script for an issue, digging into data, or building something that makes life easier, I just enjoy making things work better. 
+      I am currently seeking opportunities that allow me to grow in areas like automation, programming, and data analysis while continuing to build on my IT foundation.
       </p>
     </section>
 
